Update UI translations

--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_de.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_de.arb
@@ -18,7 +18,7 @@
   "languagePageTitle": "Lass uns auf Deutsch weitermachen? :)",
   "languagePageSubtitle": "Das kann später in den Einstellungen geändert werden.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Wenn diese süße Taube dir nicht helfen kann im Juni zu wählen, dann hilft dir gar nichts.",
+  "entranceTitle1": "If this cute pigeon can’t help you vote in June, nothing will.",
   "entranceTitle2": "Äußere deine Meinung zu Themen, die für dich wichtig sind.",
   "entranceTitle3": "Finde deine Übereinstimmung und eine Orientierung, wen du bei den Wahlen wählen sollst.",
   "entranceMatchesFoundQuote": "{count} gefundene Matches in den letzten 24 Stunden",
@@ -102,5 +102,5 @@
   "settingsPageSubtitle5": "Serviceanbieter",
   "settingsPageShareButtonText": "Share",
   "settingsPagePrivacyPolicy": "Datenschutzerklärung",
-  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
+  "settingsPageShareText": "Wenn diese süße Taube dir nicht helfen kann im Juni zu wählen, dann hilft dir gar nichts. Ich habe die App bereits benutzt und du solltest das auch tun:"
 }
