--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_es-ES.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_es-ES.arb
@@ -47,13 +47,13 @@
   "@@LoadingResultsPage": "LoadingResultsPage",
   "loadingResultsPageTitle1": "Estamos preparando tus resultados personalizados :)",
   "loadingResultsPageTitle2": "Tardaremos menos de los que cuesta conseguir entradas para Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Buscando \"matches\" para las listas de candidatos de {country}  🔍",
+  "loadingResultsPageTitle3": "Buscando \"matches\" para las candidaturas en {country}  🔍",
   "loadingResultsPageTitle4": "Casi estamos, una última comprobación...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Tienes un \"match\" y mucho más 👉👈",
   "resultsPage1Text": "A continuación te mostramos el grupo parlamentario de la UE que es más compatible contigo y las listas de candidatos nacionales en línea con él. Así podrás votarlas en junio en tu país. También te explicamos alguna que otra cosa más según lo que has respondido 😌",
   "resultsPage1Button": "Continuar",
-  "resultsPage2_1Title": "A decir verdad, entre el",
+  "resultsPage2_1Title": "Oye, entre el",
   "resultsPage2_2Title": "y tú hay como una verdadera Love Story (EU’s Version)",
   "resultsPage3Title": "Cómo de compatible eres con los grupos parlamentarios europeos",
   "resultsPage4TitleTop": "A favor de la pertenencia a la UE",
