--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
@@ -35,7 +35,7 @@
   "onBoardingStep1Title": "Gdje ćeš glasati?",
   "onBoardingStep1Subtitle": "Ne znam",
   "onBoardingStep2Title": "Moja dob",
-  "onBoardingStep3Title": "Identificiram se kao",
+  "onBoardingStep3Title": "Izjašnjavam se kao",
   "onBoardingStep3Option1": "Žena",
   "onBoardingStep3Option2": "Muškarac",
   "onBoardingStep3Option3": "Rodno-fluidna osoba",
