--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_lb.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_lb.arb
@@ -3,104 +3,104 @@
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
   "ok": "Ok",
-  "yes": "Yes",
-  "no": "No",
-  "cancel": "Cancel",
-  "textContinue": "Continue",
-  "alertServerErrorTitle": "Ops!",
-  "alertServerErrorText": "Something has gone wrong on our side. Please try again later.",
-  "skip": "Skip",
+  "yes": "Jo",
+  "no": "Nee",
+  "cancel": "Läschen",
+  "textContinue": "Weidermaachen",
+  "alertServerErrorTitle": "Ups!",
+  "alertServerErrorText": "Op eiser Säit ass eppes falsch gaang. Probéier w. e. g. méi spéit nach eng Kéier.",
+  "skip": "Iwwersprangen",
   "neutral": "Neutral",
   "faq": "FAQ",
   "@@SplashPage": "SplashPage",
-  "splashPageNoInternet": "It looks like you don't have internet connection",
+  "splashPageNoInternet": "Et gesäit aus wéi wanns du keng Internetverbindung hues",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Let’s continue in English? :)",
-  "languagePageSubtitle": "This can be changed later in settings.",
+  "languagePageTitle": "Solle mir op Englesch weidermaachen? :)",
+  "languagePageSubtitle": "Dëst kann spéider an den Astellunge geännert ginn.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "If this cute pigeon can’t help you vote in June, nothing will.",
-  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
-  "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
-  "entranceMatchesFoundQuote": "{count} matches found in the last 24h",
+  "entranceTitle1": "Wann dës léif Dauw dir net hëllefe kann am Juni ze wielen, da wäert dir näischt hellefen.",
+  "entranceTitle2": "Gëff deng Meenung iwwer Themen déi dir wichteg sinn.",
+  "entranceTitle3": "Fann däi Match an eng Orientéierung fir wien du bei de Wahlen ofstëmme kanns.",
+  "entranceMatchesFoundQuote": "{count} Matches an de leschte 24h fonnt",
   "entranceStartButton": "Start Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hungary",
-  "denmark": "Denmark",
-  "germany": "Germany",
-  "spain": "Spain",
-  "france": "France",
-  "poland": "Poland",
-  "romania": "Romania",
-  "sweden": "Sweden",
-  "onBoardingStep1Title": "Where will you vote?",
-  "onBoardingStep1Subtitle": "I don't know",
-  "onBoardingStep2Title": "My age",
-  "onBoardingStep3Title": "I identify as",
-  "onBoardingStep3Option1": "Woman",
-  "onBoardingStep3Option2": "Man",
+  "hungary": "Ungarn",
+  "denmark": "Dänemark",
+  "germany": "Däitschland",
+  "spain": "Spuenien",
+  "france": "Frankräich",
+  "poland": "Polen",
+  "romania": "Rumänien",
+  "sweden": "Schweden",
+  "onBoardingStep1Title": "Wou wäerts du wielen?",
+  "onBoardingStep1Subtitle": "Ech wees net",
+  "onBoardingStep2Title": "Mäin Alter",
+  "onBoardingStep3Title": "Ech identifizéieren mech als",
+  "onBoardingStep3Option1": "Fra",
+  "onBoardingStep3Option2": "Mann",
   "onBoardingStep3Option3": "Gender-fluid",
-  "onBoardingStep3Option4": "Non-binary",
-  "onBoardingStep3Option5": "Else",
-  "onBoardingNotAnswerButton": "Prefer not to say",
-  "onBoardingCardQuestion": "I have no clue who to vote for at the 2024 European Elections",
-  "onBoardingLastStepTitle": "Swipe according to your agreement",
+  "onBoardingStep3Option4": "Non-binär",
+  "onBoardingStep3Option5": "Anescht",
+  "onBoardingNotAnswerButton": "Wëll ech net soen",
+  "onBoardingCardQuestion": "Ech hu keng Ahnung fir wien ech bei den Europawahlen 2024 wiele soll",
+  "onBoardingLastStepTitle": "Swipe ofhängeg vun der Zoustëmmung",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Your personalised results are on their way :)",
-  "loadingResultsPageTitle2": "This shall be quicker than getting Taylor Swift tickets 👀 ",
-  "loadingResultsPageTitle3": "Finding matches with candidates lists in {country}  🔍",
-  "loadingResultsPageTitle4": "Almost ready, one last check...",
+  "loadingResultsPageTitle1": "Deng personaliséiert Resultater sinn ënnerwee :)",
+  "loadingResultsPageTitle2": "Dëst wäert méi séier sinn wéi Taylor Swift Ticketen ze kréien 👀 ",
+  "loadingResultsPageTitle3": "Matcher mat Kandidatelëschten vun {country}  🔍",
+  "loadingResultsPageTitle4": "Bal fäerdeg, ee leschte Check...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "A match and much more 👉👈",
-  "resultsPage1Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers 😌",
-  "resultsPage1Button": "Press to continue",
-  "resultsPage2_1Title": "Honestly, between the",
-  "resultsPage2_2Title": "and me, it’s kind of a Love Story (EU’s Version)",
-  "resultsPage3Title": "How close I am to European Parliament Groups",
-  "resultsPage4TitleTop": "Pro-EU Integration",
-  "resultsPage4TitleBottom": "Anti-EU Integration",
-  "resultsPage4TitleLeft": "Left",
-  "resultsPage4TitleRight": "Right",
-  "resultsPage4TitleUserHere": "It’s me, hi!",
-  "resultsPage5Title": "On more specific topics, which European Parliament Group am I closer to?",
-  "resultsPage5Topic1": "Environmental issues",
-  "resultsPage5Topic2": "Human & Social Rights",
-  "resultsPage5Topic3": "Economic intervention",
-  "resultsPage6_1Title": "Ok, it's cool knowing which group gets me...",
-  "resultsPage6_2Title": "But at the EU Elections, we vote for a local list",
-  "resultsPage6Text": "In the next screens, you’ll discover the candidate lists in your country  that are most likely to join your match.",
-  "resultsPage7Title": "The candidates in {country} most aligned with {group}",
-  "resultsPage7Disclaimer": "In no particular order.",
-  "resultsPage7NoLocalCandidates": "No local parties found in {country}",
-  "resultsPage8_1Text": "On {topic}, you’re {percentage}% more into",
-  "resultsPage8_2Text": "Active Climate Action 🌱😌",
-  "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
-  "resultsPage9Help": "Click on the cards to shuffle",
-  "resultsPage9Text1": "Elections are about many topics, but there’s one thing that really",
+  "resultsPage1Title": "Ee Match a villes méi 👉👈",
+  "resultsPage1Text": "Op den nächste Säite entdecks du deng kompatibelst Grupp am EU-Parlament, déi passend lokal Lëschte fir am Juni an dengem Land ze wielen, a mir hu souguer e puer extra Saachen op Basis vun dengen Äntwerten fonnt 😌",
+  "resultsPage1Button": "Dréck fir weiderzemaachen",
+  "resultsPage2_1Title": "Éierlech gesot, tëscht",
+  "resultsPage2_2Title": "a mir, ass et eng Aart Love Story (EU Versioun)",
+  "resultsPage3Title": "Wéi no ech de Gruppe vum Europäesche Parlament sinn",
+  "resultsPage4TitleTop": "Pro-EU Integratioun",
+  "resultsPage4TitleBottom": "Anti-EU Integratioun",
+  "resultsPage4TitleLeft": "Lénks",
+  "resultsPage4TitleRight": "Riets",
+  "resultsPage4TitleUserHere": "Salut, ech sinn et!",
+  "resultsPage5Title": "Bei méi spezifeschen Themen, wéi engem Grupp vum Europaparlament stinn ech méi no?",
+  "resultsPage5Topic1": "Ëmweltproblemer",
+  "resultsPage5Topic2": "Mënscherechter a sozial Rechter",
+  "resultsPage5Topic3": "Wirtschaftlech Interventioun",
+  "resultsPage6_1Title": "Ok, et ass cool ze wësse wéi ee Grupp mech versteet...",
+  "resultsPage6_2Title": "Mee bei den EU-Wale stëmme mir fir eng lokal Lëscht",
+  "resultsPage6Text": "Op den nächste Säite wäerts du d'Kandidatelëschten an dengem Land entdecken, déi wahrscheinlech am bëschten zu dengem Match passen.",
+  "resultsPage7Title": "D'Kandidate vun {country} déi am meeschten ausgeriicht sinn mat {group}",
+  "resultsPage7Disclaimer": "A kenger spezieller Uerdnung.",
+  "resultsPage7NoLocalCandidates": "Keng lokal Parteien zu {country} fonnt",
+  "resultsPage8_1Text": "Am {topic} bass du {percentage}% méi an",
+  "resultsPage8_2Text": "Aktiv Klimaaktioun 🌱😌",
+  "resultsPage8Help": "Du bass ee Kämpfer géint de Klimawandel! Du mengs datt d'Klimakris eng kollektiv Handlung erfuerdert, bei der jiddereen eng Haaptprioritéit draus mécht. Dir ass et egal, datt d'EU Firmen dofir reglementéiert. Wat ass schlussendlech de wirtschaftleche Wuesstum wäert wann de Planéit onbewunnbar gëtt?#ClimateActionNow #NoPlanetB?",
+  "resultsPage9Help": "Klickt op d'Kaarte fir ze shuffelen",
+  "resultsPage9Text1": "D'Wahle sinn iwwer vill Themen, awer eng Saach ass wierklech",
   "resultsPage9Text2": "Belongs With Me 😌",
-  "resultsPage10Title": "A notification when it’s time to go vote?",
-  "resultsPage10NopButton": "No thanks!",
+  "resultsPage10Title": "Eng Notifikatioun wann et Zäit ass wielen ue goen?",
+  "resultsPage10NopButton": "Nee merci!",
   "resultsPage10YesButton": "Yesssss",
-  "resultsShare": "Share",
+  "resultsShare": "Deelen",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} matches found in the last 24h",
-  "homePageBackToTest": "Back to the test",
-  "homePageMyResults": "My results",
-  "homePageStartButton": "Start a new test",
+  "homePageMatchesFoundQuote": "{count} matches an de läschte 24 h fonnt",
+  "homePageBackToTest": "Zréck op den Test",
+  "homePageMyResults": "Meng Resultater",
+  "homePageStartButton": "Mat engem neien Test starten",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "I prefer to use this app in",
-  "settingsPageTextLanguage": "To change the language, click on the current one",
-  "settingsPageTitleAbout": "About",
+  "settingsPageTitleLanguage": "Sprooch",
+  "settingsPageSubtitleLanguage": "Ech géif dës App léiwer op.... benotzen",
+  "settingsPageTextLanguage": "Fir d'Sprooch z'änneren, klick op déi aktuell",
+  "settingsPageTitleAbout": "Iwwert",
   "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people 🐦 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
-  "settingsPageTitleAssociation": "The association",
-  "settingsPageTitlePartners": "Partners",
+  "settingsPageTitleAssociation": "D'Associatioun",
+  "settingsPageTitlePartners": "Partner",
   "settingsPageTextPartners": "Important to tell you that partners have no editorial power on the content of the app, which remains a non-partisan initiative with a clear goal: helping you understand who supports your opinions at the european and national levels.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
+  "settingsPageSubtitle1": "Haaptsponsoren",
+  "settingsPageSubtitle2": "Europäesch Partner",
+  "settingsPageSubtitle3": "Akademesch Partner",
+  "settingsPageSubtitle4": "Ënnerstëtzend National Institutioune",
   "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Share",
-  "settingsPagePrivacyPolicy": "Data Protection",
+  "settingsPageShareButtonText": "Deelen",
+  "settingsPagePrivacyPolicy": "Dateschutz",
   "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
 }
