--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_pl.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_pl.arb
@@ -19,7 +19,7 @@
   "languagePageSubtitle": "Możesz to zmienić później w ustawieniach.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Jeżeli ten uroczy gołąb nie zachęci Cię do głosowania w czerwcu, to nic innego nie da rady.",
-  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
+  "entranceTitle2": "Przesuń palcem w kwestiach, które są dla Ciebie ważne.",
   "entranceTitle3": "Znajdź swój typ i dowiedz się, na kogo głosować w wyborach.",
   "entranceMatchesFoundQuote": "{count} matchy znalezionych w ciągu ostatnich 24 godzin",
   "entranceStartButton": "Rozpocznij Palumbę",
@@ -56,7 +56,7 @@
   "resultsPage2_1Title": "Szczerze mówiąc, pomiędzy",
   "resultsPage2_2Title": "a mną jest to swego rodzaju Love Story (EU’s Version)",
   "resultsPage3Title": "Jak bardzo jest mi blisko do grup Parlamentu Europejskiego",
-  "resultsPage4TitleTop": "Pro-EU Integration",
+  "resultsPage4TitleTop": "Za integracją europejską",
   "resultsPage4TitleBottom": "Przeciwko integracji europejskiej",
   "resultsPage4TitleLeft": "Lewica",
   "resultsPage4TitleRight": "Prawica",
@@ -71,7 +71,7 @@
   "resultsPage7Title": "Kandydaci w/we {country} najbardziej zgodni z {group}",
   "resultsPage7Disclaimer": "W losowej kolejności.",
   "resultsPage7NoLocalCandidates": "Nie znaleziono lokalnych grup w/we {country}",
-  "resultsPage8_1Text": "On {topic}, you’re {percentage}% more into",
+  "resultsPage8_1Text": "W kwestii {topic}, jesteś w {percentage}% za",
   "resultsPage8_2Text": "Aktywne działania na rzecz klimatu🌱😌",
   "resultsPage8Help": "Walczysz o klimat! Wierzysz, że walka z kryzysem klimatycznym wymaga wspólnych działań i uczynienia z niej priorytetu. Nie przeszkadzają Ci wprowadzane przez UE regulacje w stosunku do firm. Bo przecież na co komu wzrost gospodarczy, jeśli planeta przestanie być zdolna do zamieszkiwania?",
   "resultsPage9Help": "Kliknij na karty, aby przetasować",
@@ -91,7 +91,7 @@
   "settingsPageSubtitleLanguage": "Wolę używać tej aplikacji po",
   "settingsPageTextLanguage": "Żeby zmienić język, kliknij na język aktualnie używany w aplikacji",
   "settingsPageTitleAbout": "O aplikacji",
-  "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people 🐦 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
+  "settingsPageTextAbout": "Palumba nie jest firmą, partią polityczną, czy rządem. Jesteśmy niezależnym stowarzyszeniem non-profit złożonym z ponad 120 młodyh ludzi 🐦 z całej Europy, którzy zebrali się latem zeszłego roku i zaczęli tworzyć tę aplikację. Mamy jeden cel: pomóc Ci lepiej zrozumieć, jak działają wybory do Parlamentu Europejskiego i jakie listy kandydatów mogą odpowiadać Twoim poglądom, aby można było głosować bardziej pewnie na tych, którzy popierają wasze priorytety. Nasz algorytm jest open-source, przeciągnięte przez Ciebie stwierdzenia zostały sprawdzone przez naukowców politycznych, a Twoje dane są tak zaszyfrowane, że nie mamy możliwości zidentyfikowania Cię :)",
   "settingsPageTitleAssociation": "Stowarzyszenie",
   "settingsPageTitlePartners": "Partnerzy",
   "settingsPageTextPartners": "Warto podkreślić, że partnerzy nie mają żadnych uprawnień redakcyjnych w odniesieniu do treści aplikacji, która pozostaje inicjatywą bezstronną i ma jasny cel: pomagać zrozumieć, kto popiera Twoje opinie na szczeblu europejskim i krajowym.",
@@ -102,5 +102,5 @@
   "settingsPageSubtitle5": "Dostawcy Usług",
   "settingsPageShareButtonText": "Udostępnij",
   "settingsPagePrivacyPolicy": "Polityka Prywatności",
-  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
+  "settingsPageShareText": "Jeśli ten uroczy gołąb nie pomoże Ci zagłosować w czerwcu, to już nic nie da rady. Sprawdź tę aplikację (tak jak ja):"
 }
