Update UI translations

--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_de.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_de.arb
@@ -100,7 +100,7 @@
   "settingsPageSubtitle3": "Akademische Partner",
   "settingsPageSubtitle4": "Nationale institutionelle Partner",
   "settingsPageSubtitle5": "Serviceanbieter",
-  "settingsPageShareButtonText": "Share",
+  "settingsPageShareButtonText": "Teilen",
   "settingsPagePrivacyPolicy": "Datenschutzerklärung",
   "settingsPageShareText": "Wenn diese süße Taube dir nicht helfen kann im Juni zu wählen, dann hilft dir gar nichts. Ich habe die App bereits benutzt und du solltest das auch tun:"
 }
