--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_et.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_et.arb
@@ -11,7 +11,7 @@
   "alertServerErrorText": "Something has gone wrong on our side. Please try again later.",
   "skip": "Skip",
   "neutral": "Neutral",
-  "faq": "FAQ",
+  "faq": "KKK",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "It looks like you don't have internet connection",
   "@@LanguagePage": "LanguagePage",
