--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_lb.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_lb.arb
@@ -8,20 +8,20 @@
   "cancel": "Läschen",
   "textContinue": "Weidermaachen",
   "alertServerErrorTitle": "Ups!",
-  "alertServerErrorText": "Op eiser Säit ass eppes falsch gaang. Probéier w. e. g. méi spéit nach eng Kéier.",
+  "alertServerErrorText": "Op eiser Säit ass eppes falsch gelaaf. Probéier w. e. g. méi spéit nach eng Kéier.",
   "skip": "Iwwersprangen",
   "neutral": "Neutral",
   "faq": "FAQ",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Et gesäit aus wéi wanns du keng Internetverbindung hues",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Solle mir op Englesch weidermaachen? :)",
+  "languagePageTitle": "Solle mir op Lëtzebuergesch weidermaachen? :)",
   "languagePageSubtitle": "Dëst kann spéider an den Astellunge geännert ginn.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Wann dës léif Dauw dir net hëllefe kann am Juni ze wielen, da wäert dir näischt hellefen.",
   "entranceTitle2": "Gëff deng Meenung iwwer Themen déi dir wichteg sinn.",
   "entranceTitle3": "Fann däi Match an eng Orientéierung fir wien du bei de Wahlen ofstëmme kanns.",
-  "entranceMatchesFoundQuote": "{count} Matches an de leschte 24h fonnt",
+  "entranceMatchesFoundQuote": "{count} matches an de leschte 24h fonnt",
   "entranceStartButton": "Start Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
   "hungary": "Ungarn",
@@ -54,18 +54,18 @@
   "resultsPage1Text": "Op den nächste Säite entdecks du deng kompatibelst Grupp am EU-Parlament, déi passend lokal Lëschte fir am Juni an dengem Land ze wielen, a mir hu souguer e puer extra Saachen op Basis vun dengen Äntwerten fonnt 😌",
   "resultsPage1Button": "Dréck fir weiderzemaachen",
   "resultsPage2_1Title": "Éierlech gesot, tëscht",
-  "resultsPage2_2Title": "a mir, ass et eng Aart Love Story (EU Versioun)",
+  "resultsPage2_2Title": "a mir, ass et eng Aart Love Story (EU's Version)",
   "resultsPage3Title": "Wéi no ech de Gruppe vum Europäesche Parlament sinn",
   "resultsPage4TitleTop": "Pro-EU Integratioun",
   "resultsPage4TitleBottom": "Anti-EU Integratioun",
   "resultsPage4TitleLeft": "Lénks",
   "resultsPage4TitleRight": "Riets",
   "resultsPage4TitleUserHere": "Salut, ech sinn et!",
-  "resultsPage5Title": "Bei méi spezifeschen Themen, wéi engem Grupp vum Europaparlament stinn ech méi no?",
+  "resultsPage5Title": "Bei méi spezifeschen Themen, wéi enger Fraktioun vum Europaparlament stinn ech méi no?",
   "resultsPage5Topic1": "Ëmweltproblemer",
   "resultsPage5Topic2": "Mënscherechter a sozial Rechter",
   "resultsPage5Topic3": "Wirtschaftlech Interventioun",
-  "resultsPage6_1Title": "Ok, et ass cool ze wësse wéi ee Grupp mech versteet...",
+  "resultsPage6_1Title": "Ok, et ass cool ze wësse wéi eng Fraktioun mech versteet...",
   "resultsPage6_2Title": "Mee bei den EU-Wale stëmme mir fir eng lokal Lëscht",
   "resultsPage6Text": "Op den nächste Säite wäerts du d'Kandidatelëschten an dengem Land entdecken, déi wahrscheinlech am bëschten zu dengem Match passen.",
   "resultsPage7Title": "D'Kandidate vun {country} déi am meeschten ausgeriicht sinn mat {group}",
@@ -77,7 +77,7 @@
   "resultsPage9Help": "Klickt op d'Kaarte fir ze shuffelen",
   "resultsPage9Text1": "D'Wahle sinn iwwer vill Themen, awer eng Saach ass wierklech",
   "resultsPage9Text2": "Belongs With Me 😌",
-  "resultsPage10Title": "Eng Notifikatioun wann et Zäit ass wielen ue goen?",
+  "resultsPage10Title": "Eng Notifikatioun wann et Zäit ass wielen ze goen?",
   "resultsPage10NopButton": "Nee merci!",
   "resultsPage10YesButton": "Yesssss",
   "resultsShare": "Deelen",
@@ -91,16 +91,16 @@
   "settingsPageSubtitleLanguage": "Ech géif dës App léiwer op.... benotzen",
   "settingsPageTextLanguage": "Fir d'Sprooch z'änneren, klick op déi aktuell",
   "settingsPageTitleAbout": "Iwwert",
-  "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people 🐦 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
+  "settingsPageTextAbout": "Palumba ass keng Firma, keng politesch Partei, keng Regierung. Mir sinn eng onofhängeg Associatioun ouni Gewënnzweck mat 120+ Jonken 🐦aus ganz Europa, déi leschte Summer zesummekomm sinn, an ugefaang hunn dës App ze kreéieren. Mir hunn een Zil: Iech ze hëllefen besser ze verstoen wéi d'Europawahlen funktionnéieren a wéi eng Kandidatelëschte mat Ären Iddie zesummepassen, sou datt Dir méi zouversiichtlech fir Leit kënnt wielen, déi Är Prioritéite ënnerstëtzen. Eisen Algorithmus ass Open-Source, d'Aussoen déi Dir swipt goufe vu Politesche Wëssenschaftler iwwerpréift, an Är Donnéeë sinn sou verschlësselt datt mir kee Wee hunn Iech jee ze identifizéieren :)",
   "settingsPageTitleAssociation": "D'Associatioun",
   "settingsPageTitlePartners": "Partner",
-  "settingsPageTextPartners": "Important to tell you that partners have no editorial power on the content of the app, which remains a non-partisan initiative with a clear goal: helping you understand who supports your opinions at the european and national levels.",
+  "settingsPageTextPartners": "Wichteg ze soen ass, datt d'Partner keng redaktionnell Muecht iwwer den Inhalt vun der App hunn, déi eng onparteiesch Initiative mat engem klore Zil bleift: Iech ze hëllefen ze verstoen wien Är Meenungen um europäeschen an nationalen Niveau ënnerstëtzt.",
   "settingsPageSubtitle1": "Haaptsponsoren",
   "settingsPageSubtitle2": "Europäesch Partner",
   "settingsPageSubtitle3": "Akademesch Partner",
-  "settingsPageSubtitle4": "Ënnerstëtzend National Institutioune",
+  "settingsPageSubtitle4": "National Institutional Partners",
   "settingsPageSubtitle5": "Service Providers",
   "settingsPageShareButtonText": "Deelen",
   "settingsPagePrivacyPolicy": "Dateschutz",
-  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
+  "settingsPageShareText": "Wann dës léif Dauw dir net hëllefe kann am Juni ze wielen, da wäert dir näischt hellefen. Ech hunn d'App benotzt an du solls och:"
 }
