Update UI translations

--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
@@ -12,6 +12,8 @@
   "skip": "Omet",
   "neutral": "Neutral",
   "faq": "FAQ",
+  "message_half_test_done": "Segueix, ja vas per la meitat!",
+  "message_five_cards_left": "Últimes 5 preguntes :)",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Sembla que no tens connexió a Internet",
   "@@LanguagePage": "LanguagePage",
