--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_lb.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_lb.arb
@@ -12,6 +12,8 @@
   "skip": "Iwwersprangen",
   "neutral": "Neutral",
   "faq": "FAQ",
+  "message_half_test_done": "Keep swiping, you're 50% done!",
+  "message_five_cards_left": "Only 5 cards left to swipe :)",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Et gesäit aus wéi wanns du keng Internetverbindung hues",
   "@@LanguagePage": "LanguagePage",
