--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ro.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ro.arb
@@ -12,6 +12,8 @@
   "skip": "Sari peste",
   "neutral": "Neutru",
   "faq": "FAQ",
+  "message_half_test_done": "Continuă să dai swipe, ești 50% gata!",
+  "message_five_cards_left": "Doar 5 carduri rămase :)",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Se pare că nu ești conectat/ă la internet",
   "@@LanguagePage": "LanguagePage",
@@ -19,8 +21,8 @@
   "languagePageSubtitle": "Acest lucru poate fi schimbat mai târziu în setări.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Dacă acest porumbel drăguț nu te poate ajuta să votezi în iunie, nimic nu te poate ajuta.",
-  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
-  "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
+  "entranceTitle2": "Dă swipe la opinia ta despre subiectele de care îți pasă!",
+  "entranceTitle3": "Descoperă-ți perechea și orientarea către cine poți vota la alegeri.",
   "entranceMatchesFoundQuote": "{count} Potriviri găsite în ultimele 24 de ore",
   "entranceStartButton": "Pornește Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
