--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_bg.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_bg.arb
@@ -12,6 +12,8 @@
   "skip": "Пропускане",
   "neutral": "Неутрален",
   "faq": "ЧЗВ",
+  "message_half_test_done": "Keep swiping, you're 50% done!",
+  "message_five_cards_left": "Only 5 cards left to swipe :)",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Изглежда, че нямате връзка с интернет",
   "@@LanguagePage": "LanguagePage",
