--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_lt.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_lt.arb
@@ -12,6 +12,8 @@
   "skip": "Praleisti",
   "neutral": "Neturiu nuomonės",
   "faq": "DUK",
+  "message_half_test_done": "Keep swiping, you're 50% done!",
+  "message_five_cards_left": "Only 5 cards left to swipe :)",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Panašu, kad neturite prieigos prie interneto",
   "@@LanguagePage": "LanguagePage",
