--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_pt-PT.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_pt-PT.arb
@@ -12,6 +12,8 @@
   "skip": "Saltar",
   "neutral": "Neutro",
   "faq": "Perguntas frequentes",
+  "message_half_test_done": "Keep swiping, you're 50% done!",
+  "message_five_cards_left": "Only 5 cards left to swipe :)",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Parece que não estás conectado à internet",
   "@@LanguagePage": "LanguagePage",
