--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_sv-SE.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_sv-SE.arb
@@ -12,6 +12,8 @@
   "skip": "Hoppa över",
   "neutral": "Neutral",
   "faq": "Vanliga frågor (FAQ)",
+  "message_half_test_done": "Keep swiping, you're 50% done!",
+  "message_five_cards_left": "Only 5 cards left to swipe :)",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Det verkar som om du saknar internetanslutning",
   "@@LanguagePage": "LanguagePage",
